--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mime-types": "^2.1.33",
     "mongoose": "^6.0.10",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
+    "mysql": "^2.18.1",
     "socket.io": "^4.2.0"
   },
   "devDependencies": {
